<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Default_Background_Color"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/common_layout_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/Home_CalendarView_Calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>

            <android.widget.Button
                android:id="@+id/Home_Button_OpenMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_layout_margin"
                android:background="@drawable/custom_button"
                android:text="@string/Home_Button_OpenMeeting_Text" />

            <android.widget.Button
                android:id="@+id/Home_Button_AddNewMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_layout_margin"
                android:background="@drawable/custom_button"
                android:text="@string/Home_Button_AddNewMeeting_Text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/Home_Button_AddNewPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_layout_margin"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:text="@string/Home_Button_AddNewPayment_Text" />

                <android.widget.Button
                    android:id="@+id/Home_Button_RemovePayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_layout_margin"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:text="@string/Home_Button_RemovePayment_Text" />
            </LinearLayout>

            <TextView
                android:id="@+id/Home_TextView_ShowMeetingsTitle"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/common_title_size"
                android:layout_margin="@dimen/common_layout_margin"
                android:textAlignment="center"
                android:text="@string/Home_TextView_LastSevenDays_Text"/>

            <LinearLayout
                android:id="@+id/Home_LinearLayout_ShowNextMeetings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>