<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Default_Background_Color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/common_layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/common_title_size"
                android:textAlignment="center"
                android:text="@string/Menu_TextView_SettingsTitle"/>

            <android.widget.Button
                android:id="@+id/SettingsFragment_Button_ResetData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/custom_button"
                android:text="@string/Menu_Button_ResetData_Text"
                app:flow_horizontalAlign="center" />

            <android.widget.Button
                android:id="@+id/SettingsFragment_Button_AddTestData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/custom_button"
                android:text="@string/Menu_Button_AddTestData_Text"
                app:flow_horizontalAlign="center" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>